Refactor BugCheckTask